# mma-accuracy

./: CMakeLists.txt  GEMM.cpp  GEMM.h  GEMM_BF16.cuh  GEMM_E2M3.h  GEMM_E3M2.cuh  GEMM_E4M3.cuh  GEMM_E5M2.h  GEMM_FP16.h  GEMM_FP32.cuh  GEMM_GPU.cu  GEMM_GPU.h  helper.h  kernel_bf16.cu  kernel_fp32.cu  kernel_fp8_e4m3.cu  kernel_fp8_e5m2.cu  main_bf16.cu  main_fp16.cu  main_fp32.cu  main_fp6_e2m3.cu  main_fp6_e3m2.cu  main_fp8_e4m3.cu  main_fp8_e5m2.cu  precision_bf16.cpp  precision_fp16.cpp  precision_fp32.cpp  precision_fp6_e2m3.cpp  precision_fp6_e3m2.cpp  precision_fp8_e4m3.cpp  precision_fp8_e5m2.cpp  test_precisision.h
cmake/: gemm_config.h.in
include/: gemm.h  helper.h
include/gemm/gpu/: GEMM_BF16.cuh  GEMM_E2M3.cuh  GEMM_E3M2.cuh  GEMM_E4M3.cuh  GEMM_E5M2.cuh  GEMM_FP16.cuh  GEMM_FP32.cuh  GEMM_GPU.h
kernels/: kernel_bf16.cu  kernel_fp16.cu  kernel_fp32.cu  kernel_fp6_e2m3.cu  kernel_fp6_e3m2.cu  kernel_fp8_e4m3.cu  kernel_fp8_e5m2.cu
src/: CMakeLists.txt
src/gemm/: GEMM.cpp  GEMM_GPU.cu
tests/: CMakeLists.txt
tests/precision/: CMakeLists.txt  precision_bf16.cpp  precision_fp16.cpp  precision_fp32.cpp  precision_fp6_e2m3.cpp  precision_fp6_e3m2.cpp  precision_fp8_e4m3.cpp  precision_fp8_e5m2.cpp  test_precisision.h
tests/range/: CMakeLists.txt  range_fp16.cpp  range_fp32.cpp  range_fp6_e2m3.cpp  range_fp6_e3m2.cpp  range_fp8_e4m3.cpp  range_fp8_e5m2.cpp  test_range.h
tests/simple/: CMakeLists.txt  simple_fp16.cpp  simple_fp6_e3m2.cpp  simple_fp8_e4m3.cpp  test_simple.h
