set(PRECISIONS fp32 fp16)

if(HAVE_BF16)
  list(APPEND PRECISIONS bf16)
endif()
if(HAVE_FP8)
  list(APPEND PRECISIONS fp8_e4m3 fp8_e5m2)
endif()
if(HAVE_FP6)
  list(APPEND PRECISIONS fp6_e2m3 fp6_e3m2)
endif()

foreach(precision ${PRECISIONS})
  set(MAIN_FILE precision_${precision}.cpp)
  set(KERNEL_FILE "${CMAKE_SOURCE_DIR}/kernels/kernel_${precision}.cu")
  string(REPLACE "_" "-" precision ${precision})
  set(TEST_NAME precision-${precision})
  add_executable(${TEST_NAME} ${MAIN_FILE} ${KERNEL_FILE})
  set_source_files_properties(${MAIN_FILE} PROPERTIES LANGUAGE CUDA)
  target_link_libraries(${TEST_NAME} $<TARGET_OBJECTS:GEMM>)
endforeach()
